--- a/asset/css/common/mixin/mixin.scss
+++ b/asset/css/common/mixin/mixin.scss
@@ -3,7 +3,7 @@
     width: 100%;
 }
 @mixin fontMeri($kg:400) {
-    font-family: 'Elle Futura', sans-serif;
+    font-family: 'Poppins', sans-serif;
     font-weight: $kg;
 }
 
