--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -8,22 +8,17 @@ html, body {
   height: 100%; }
 
 body {
-  overflow: hidden; }
-  body::-webkit-scrollbar {
-    transition: all 0.8s ease-in-out; }
-  body::-webkit-scrollbar-track {
-    transition: all 0.8s ease-in-out; }
-  body::-webkit-scrollbar-thumb {
-    background: #5c4e4e; }
+  overflow: hidden;
+  /* Track */
+  /* Handle */ }
+  body ::-webkit-scrollbar {
+    width: 10px; }
+  body ::-webkit-scrollbar-track {
+    background: #f1f1f1; }
+  body ::-webkit-scrollbar-thumb {
+    background: #888; }
   body.unhide {
     overflow-y: scroll !important; }
-    body.unhide::-webkit-scrollbar {
-      width: 10px; }
-    body.unhide::-webkit-scrollbar-track {
-      width: 50px;
-      background: transparent; }
-    body.unhide::-webkit-scrollbar-thumb {
-      border-radius: 60px; }
 
 html {
   scroll-behavior: smooth; }
@@ -46,6 +41,19 @@ input:focus, textarea:focus {
 
 ul {
   display: block; }
+
+.progress-bar {
+  position: fixed;
+  height: 100%;
+  width: 10px;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background-color: red;
+  z-index: 9999; }
+  .progress-bar .body-progress {
+    height: 0;
+    width: 100%; }
 
 .fullpage {
   height: 100%;
@@ -133,7 +141,7 @@ ul {
         font-weight: 400;
         color: #fff; }
         .fullpage .section-1 .section-content__info .content__info-img {
-          width: 135px;
+          width: 145px;
           height: 150px;
           border-radius: 100%;
           margin-bottom: 20px;
@@ -326,7 +334,7 @@ ul {
         background-repeat: no-repeat;
         background-position: center;
         background-size: 100%;
-        transition: all 0.3s ease-in-out; }
+        transition-duration: 0.5s; }
         .fullpage .section-3 .section-content__first:hover {
           background-size: 150%; }
           .fullpage .section-3 .section-content__first:hover .content__icon-button {
@@ -716,7 +724,7 @@ ul {
   .fullpage .dot {
     position: fixed;
     height: 100vh;
-    right: 0;
+    right: 10px;
     bottom: 0;
     top: 0;
     background-color: #fff;
