--- a/asset/css/settings/global.scss
+++ b/asset/css/settings/global.scss
@@ -9,30 +9,21 @@ html,body
     height: 100%;}
 body{
     overflow: hidden;
-    &::-webkit-scrollbar {
-        transition: all 0.8s ease-in-out;
+    ::-webkit-scrollbar {
+        width: 10px;
       }
-      &::-webkit-scrollbar-track {
-         
-          transition: all 0.8s ease-in-out;
-        
+      
+      /* Track */
+      ::-webkit-scrollbar-track {
+        background: #f1f1f1; 
       }
-      &::-webkit-scrollbar-thumb {
-        background: rgb(92, 78, 78); 
-        
+       
+      /* Handle */
+      ::-webkit-scrollbar-thumb {
+        background: #888; 
       }
     &.unhide{
         overflow-y: scroll !important;
-        &::-webkit-scrollbar{
-            width: 10px;
-        }
-        &::-webkit-scrollbar-track{
-            width: 50px;
-            background: transparent; 
-        }
-        &::-webkit-scrollbar-thumb{
-            border-radius: 60px;
-        }
     }
 }
 html{
